# tit-for-tat-simulator

./: CMakeLists.txt  GamePair.cpp  GamePair.h  PayoffMatrix.h  README.md  Strategy.h  main.cpp
strategies/: AlwaysCooperateStrategy.cpp  AlwaysCooperateStrategy.h  AlwaysDefectStrategy.cpp  AlwaysDefectStrategy.h  TitForTatStrategy.cpp  TitForTatStrategy.h
